tests/invalid/multi_namespace/services.php
<?php

namespace Multi\Service;

function takesTwo(int $a, int $b): void
{
}

